 * Reworked !isset() checks to use check_varset().
 * Reworked BCTimer class to be more useful for debugging.
 * Reworked code formatting for $c_ variables.
 * Updated comments in all localization files to point to correct file names.
 * Updated Hungarian, Russian, Romanian, German, Danish, Norwegian and Dutch localizations.
 * Add the ability to enter a bugnote when you update a bug

2002.05.19  -  0.17.3

 * Bumped version number.
 * Fixed problem with CSV not downloading.
 * Fixed no colors when using non-English languages (temporary fix).
 * Fixed bug_close to add bugnote.
 * Fixed file uploads to not show up for VIEWERS.
 * Modified core_API.php to always turn magic_quotes_runtime OFF.
 * Modified disk uploads to use the file_download.php script.
 * Modified bugnote last_modified query slightly.
 * Modified reporter and assign_to option lists.
 * Updated PHP and MySQL requirements.
 * Updated Norwegian, Russian, Danish and Dutch translations.
 * Added die to print_header_redirect().
 * Added russian_koi8 translation.
 * Added HTTP_POST_FILES to core_API.php.
 * Added check for empty bugnotes.
 * Removed view_csv_export_inc.php (unused).
 * Removed print_user_option_list() (unused).
 * Closed a security problem in account_update.php.

2002.05.12  -  0.17.2

 * Fixed error in set_project where setting a project would result in a loop.
 * Fixed account profiles to check for blank inputs.
 * Fixed some problems with BASIC_AUTH.
 * Fixed problems with documentation links.
 * Fixed a few documentation errors in configuration.html.
 * Fixed bug_update to no longer cut off steps_to_reproduce if it has quotation marks.
 * Fixed # bug links in emails.
 * Fixed bugnote update to redirect properly after update.
 * Fixed bugnote update to check for proper access.
 * Fixed bug_file_upload_inc to user $g_max_file_size.
 * Fixed CSV exporting to not have SPAN tags.
 * Fixed CSV export MIME type.
 * Fixed potential variable warning in main_page.