@@ -6,11 +6,11 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Revision: 1.21 $
+	# $Revision: 1.22 $
 	# $Author: jfitzell $
-	# $Date: 2002-08-16 09:26:15 $
+	# $Date: 2002-08-16 10:16:25 $
 	#
-	# $Id: bugnote_add.php,v 1.21 2002-08-16 09:26:15 jfitzell Exp $
+	# $Id: bugnote_add.php,v 1.22 2002-08-16 10:16:25 jfitzell Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -32,7 +32,7 @@
 	# check for blank bugnote
 	if ( !empty( $f_bugnote_text ) ) {
 #@@@ jf - need to add string_prepare_textarea() call or something once that is resolved
-		$result = add_bugnote( $f_id, $f_bugnote_text, (bool)$f_private );
+		$result = bugnote_add( $f_id, $f_bugnote_text, (bool)$f_private );
 
 		# notify reporter and handler
 		if ( $result ) {
